// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add record stepper tests should render steps with specific active step 1`] = `
<ForwardRef(Stepper)
  activeStep={0}
>
  <ForwardRef(Step)
    key="stepper_0"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 1
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
  <ForwardRef(Step)
    key="stepper_1"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 2
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
  <ForwardRef(Step)
    key="stepper_2"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 3
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
</ForwardRef(Stepper)>
`;

exports[`Add record stepper tests should render steps with specific active step 2`] = `
<ForwardRef(Stepper)
  activeStep={1}
>
  <ForwardRef(Step)
    key="stepper_0"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 1
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
  <ForwardRef(Step)
    key="stepper_1"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 2
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
  <ForwardRef(Step)
    key="stepper_2"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 3
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
</ForwardRef(Stepper)>
`;

exports[`Add record stepper tests should render steps with specific active step 3`] = `
<ForwardRef(Stepper)
  activeStep={2}
>
  <ForwardRef(Step)
    key="stepper_0"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 1
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
  <ForwardRef(Step)
    key="stepper_1"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 2
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
  <ForwardRef(Step)
    key="stepper_2"
  >
    <ForwardRef(StepLabel)>
      <span>
        Step 3
      </span>
    </ForwardRef(StepLabel)>
  </ForwardRef(Step)>
</ForwardRef(Stepper)>
`;
